<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculationsActivity">

    <TextView
        android:id="@+id/textHintOperation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/hint_operation"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHintOperation" />

    <RadioGroup
        android:id="@+id/rgStrategy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textResult">

        <RadioButton
            android:id="@+id/radioAverage"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_average"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="483dp" />

        <RadioButton
            android:id="@+id/radioSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_sum"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="483dp" />

        <RadioButton
            android:id="@+id/radioMixed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_mixed"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="483dp" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonSendResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/button_send_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgStrategy" />
</androidx.constraintlayout.widget.ConstraintLayout>